--- a/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Shared/_Layout.cshtml
+++ b/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Shared/_Layout.cshtml
@@ -5,26 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AspNetCore.WebRTCClient</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="~/lib/alertifyjs/alertify.min.css" rel="stylesheet" />
+    <link href="~/lib/alertifyjs/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">AspNetCore.WebRTCClient</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">WebRTC demo</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
+                    <span class="navbar-text text-right">
+                        You are <span id="upper-username"></span>
+                    </span>
                 </div>
             </div>
         </nav>
@@ -43,6 +40,13 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/signalr/signalr.min.js"></script>
+    <script src="~/lib/alertifyjs/alertify.min.js"></script>
+    <script src="~/js/utilsRTC.js"></script>
+    <script src="~/js/constWebRTC.js"></script>
+    <script src="~/lib/adapterjs/adapter.min.js"></script>
+    <script src="~/lib/adapterjs/adapter.screenshare.min.js"></script>
+    <script src="~/js/connectionHub.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
