Initiliaze page with own video

--- a/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Index.cshtml
+++ b/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Index.cshtml
@@ -41,12 +41,12 @@
             <div class="row-fluid">
                 <div class="span6">
                     <h4>You</h4>
-                    <video class="video mine cool-background" autoplay="autoplay">
+                    <video id="local-video" class="video mine cool-background" autoplay="autoplay">
                     </video>
                 </div>
                 <div class="span6">
                     <h4>Partner</h4>
-                    <video class="video partner cool-background" autoplay="autoplay"> </video>
+                    <video id="remote-video" class="video partner cool-background" autoplay="autoplay"> </video>
                 </div>
             </div>
         </div>
