--- a/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Shared/_Layout.cshtml
+++ b/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - AspNetCore.WebRTCClient - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2020 - WebRTC demo - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
