Almost all changes done

--- a/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Shared/_Layout.cshtml
+++ b/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link href="~/lib/alertifyjs/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body data-mode="idle">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
