--- a/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/wwwroot/css/site.css
+++ b/AspNetCore.WebRTCClient/AspNetCore.WebRTCClient/wwwroot/css/site.css
@@ -69,3 +69,7 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+#local-video, #remote-video {
+    max-height: 300px;
+}
